# CIRISGame

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MISSION.md  README.md
.github/workflows/: build.yml  ci.yml  memory-benchmark.yml  pages.yml  refresh-ios-substrate.yml  release.yml  repo-size-audit.yml  safety-battery.yml  test.yml  update-latest-tag.yml  update-version.yml
assets/geometry/: rhombic-dodeca-edges.ron
assets/shaders/: cube.wgsl  mist.wgsl  orb.wgsl  pipe.wgsl  plasma.wgsl
assets/strings/: en.ftl  yo.ftl
crates/ciris-game-engine/: Cargo.toml
crates/ciris-game-engine-core/: Cargo.toml
crates/ciris-game-engine-core/examples/: no_crossing_analysis.rs
crates/ciris-game-engine-core/src/: board.rs  board_view.rs  crossing.rs  daily_seed.rs  dispersal.rs  engine.rs  hash.rs  lattice.rs  lib.rs  play.rs  temperature.rs
crates/ciris-game-engine-core/tests/: algorithm_a_sweep.rs  core.rs  daily_seed.rs  resonance_sweep.rs
crates/ciris-game-engine/src/: agent.rs  attract.rs  capture.rs  cube.rs  effects.rs  endgame.rs  environment.rs  fonts.rs  gameplay.rs  geometry.rs  hover.rs  i18n.rs  intro.rs  lang_hud.rs  lib.rs  lighting.rs  main.rs  materials.rs  mist.rs  navigation.rs  orb.rs  palette.rs  pipe.rs  plasma.rs  render.rs  screensaver.rs  signets.rs  spikes.rs  state.rs  tendrils.rs  topology.rs  ui_theme.rs  wizard.rs
docs/: BACKLOG.md  DESIGN_BRIEF.md  ITERATION_KNOBS.json
docs/analysis/: BEVY_VFX.md  GAME_THEORY.md  NO_CROSSING_RULE.md  TOPOLOGY_DIAL.md
tokens/: colors.rs  tokens.css  tokens.json
