[package]
name = "ciris-game-engine-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic no_std core for CIRISGame: rhombic-dodecahedral lattice math, mesh rules, Algorithm A (Morton-greedy) dispersal, scoring, and board_state_hash."

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
arrayvec = { version = "0.7", default-features = false }
libm = "0.2"

[[bin]]
name = "ciris-play"
path = "src/play.rs"
required-features = ["std"]

[features]
default = []
# `std` is opt-in for hosts that want it; the crate is no_std + alloc otherwise.
std = ["serde/std", "sha2/std", "arrayvec/std"]
# `json` enables BoardView::to_json() via serde_json (alloc-only, no std needed).
json = ["dep:serde_json"]
