# ciris-game-engine — the Bevy 0.19 view layer for CIRISGame.
#
# The deterministic rules live in `ciris-game-engine-core`; this crate re-exports
# that API unchanged (see `lib.rs`) and adds the rendered presentation.
#
# Feature shape (mirrors CLAUDE.md's build commands). All rendering lives behind
# `render`; `headless` enables NO rendering (no bevy_render / wgpu) and is what CI
# and AI tournaments link. Cargo features are additive, so the two paths are only
# ever built one at a time:
#
#   native (default)  →  windowed PBR via winit (macOS/Linux/Windows)
#   webgpu / webgl2   →  the two wasm32-unknown-unknown artifacts
#   headless          →  MinimalPlugins, no GPU, no window
[package]
name = "ciris-game-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bevy 0.19 view layer for CIRISGame: rhombic-dodecahedral lattice render over the deterministic ciris-game-engine-core."

[lib]
name = "ciris_game_engine"
path = "src/lib.rs"

[[bin]]
name = "ciris-game"
path = "src/main.rs"

[dependencies]
ciris-game-engine-core = { path = "../ciris-game-engine-core", features = ["json"] }
bevy = { version = "0.19", default-features = false }
bevy_panorbit_camera = { version = "0.35", optional = true }
# Deterministic AI RNG for the screensaver driver. Versions match the core crate
# so the workspace resolves a single copy. Render-only (gated by `render`).
rand_chacha = { version = "0.3", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
# Localization: Project Fluent (.ftl) runtime. Pure-Rust and wasm-safe; the
# umbrella crate re-exports fluent-bundle. `unic-langid` supplies the LanguageId
# parsing + RTL/script lookup. Render-only — the headless build links no UI and
# so needs no strings. See `i18n.rs`.
fluent = { version = "0.17", optional = true }
unic-langid = { version = "0.9", optional = true }

[features]
# Native windowed render is the default (CLAUDE.md `cargo build --release`).
default = ["native"]

# Native desktop: full render machinery + the Linux window backends + the
# texture/post passthroughs the brief always ships with (§1).
native = [
    "render",
    "agent",
    "bevy/multi_threaded",
    "bevy/x11",
    "bevy/wayland",
    "tonemapping_luts",
    "bloom",
    "pbr_transmission_textures",
]

# Agent HTTP client feature: ureq + image + base64 + serde (native only).
agent = ["dep:ureq", "dep:image", "dep:base64", "dep:serde", "dep:serde_json"]

# Shared render machinery. Everything GPU-facing is gated on this feature so that
# `headless` links none of it. Pulls in the panorbit camera dependency too.
render = [
    "dep:bevy_panorbit_camera",
    "dep:rand_chacha",
    "dep:rand_core",
    "dep:fluent",
    "dep:unic-langid",
    "bevy/std",
    "bevy/bevy_winit",
    "bevy/bevy_window",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    # The Bevy States machine (Intro → Setup → Playing, see `state.rs`). Not in
    # the umbrella default set we opted out of, so name it explicitly.
    "bevy/bevy_state",
    # In-engine UI for the intro, the setup wizard, and the §4.7 WILD line. All
    # webgl2-safe, pure-Rust; `default_font` embeds a font so the UI renders even
    # when no system family (Inter / Source Serif 4 / JetBrains Mono) resolves.
    "bevy/bevy_ui",
    "bevy/bevy_ui_render",
    "bevy/bevy_text",
    "bevy/default_font",
    "bevy/bevy_asset",
    "bevy/bevy_log",
    # bevy_image pulls zstd (KTX2 supercompression); pick the pure-Rust backend
    # so the wasm artifacts build without a C toolchain.
    "bevy/zstd_rust",
    # PNG decoding for the per-steward Gray-Scott seed textures (§4.2).
    "bevy/png",
]

# The two wasm artifacts (CLAUDE.md build block). `webgpu` is primary; `webgl2`
# is the fallback. Both carry the same texture/post passthroughs.
webgpu = ["render", "bevy/webgpu", "tonemapping_luts", "bloom", "pbr_transmission_textures"]
webgl2 = ["render", "bevy/webgl2", "tonemapping_luts", "bloom", "pbr_transmission_textures"]

# Passthroughs from CLAUDE.md's feature list → the bevy features that back them.
# NOTE: there is no bevy `bloom` feature in 0.19 — Bloom moved into
# `bevy_post_process`, so that is what `bloom` maps to.
tonemapping_luts = ["render", "bevy/tonemapping_luts"]
bloom = ["render", "bevy/bevy_post_process"]
pbr_transmission_textures = ["render", "bevy/pbr_transmission_textures"]

# Headless: links NO rendering. Just enough bevy for an App + MinimalPlugins.
headless = ["bevy/std"]

# wasm-only: read `?mode=agent` off the page URL to flip the wizard defaults
# (`state::detect_mode`). web-sys is already in the tree via bevy_winit on wasm,
# so naming the `Window`/`Location` bindings here adds no new crate. Native reads
# the `CIRISGAME_MODE` env var instead and pulls nothing.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

# Native-only: agent HTTP client + PNG grid renderer for multi-modal agents.
# ureq is sync/blocking (no tokio); image encodes the colored-grid PNG.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2", features = ["json"], optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
base64 = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
